# kardashev-sim

./: .gitignore  README.md  design_notes.md  pyproject.toml  run.py
data/: bodies.json  collectors.json  factories.json  materials.json  vehicles.json
data/scenarios/: advanced_k2.yaml  baseline.yaml  fast_ramp.yaml  low_yield.yaml
results/advanced_k2/: band_summary.csv  events.csv  parameters.json  summary.json  timeseries.csv
src/ds/: __init__.py  __main__.py  cli.py  config.py
src/ds/bodies/: bodies_schema.py  loaders.py
src/ds/economy/: factories.py  manufacturing.py  reliability.py  resources.py
src/ds/mission/: launch_strategy.py  orbit_assignment.py  phases.py  scheduler.py
src/ds/physics/: constants.py  materials.py  orbits.py  thermal.py
src/ds/sim/: engine.py  metrics.py  outputs.py  scenarios.py
src/dyson_swarm_sim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_conservation.py  test_orbits.py  test_scenarios.py  test_units.py
